RESOLVED FIXED52410
[chromium] Fix minor type in plugin printing
https://bugs.webkit.org/show_bug.cgi?id=52410
Summary [chromium] Fix minor type in plugin printing
John Abd-El-Malek
Reported 2011-01-13 17:03:08 PST
[chromium] Fix minor type in plugin printing
Attachments
Patch (1.36 KB, patch)
2011-01-13 17:08 PST, John Abd-El-Malek
mihaip: review+
John Abd-El-Malek
Comment 1 2011-01-13 17:08:10 PST
John Abd-El-Malek
Comment 2 2011-01-13 17:32:35 PST
Note You need to log in before you can comment on or make changes to this bug.