2011-01-13  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Mihai Parparita.

        [chromium] Fix minor type in plugin printing
        https://bugs.webkit.org/show_bug.cgi?id=52410

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::printBegin):


Canonical link: https://commits.webkit.org/66018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75759 268f45cc-cd09-0410-ab3c-d52691b4dbfc